--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-update-modul": "^1.5.5",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "rimraf": "^2.6.1",
