--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "gulp-update-modul": "^1.5.5",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
+    "jshint": "^2.9.5",
     "rimraf": "^2.6.1",
-    "scrollspy-js": "^0.1.3"
+    "scrollspy-js": "^0.1.3",
+    "standard": "^10.0.3"
   },
   "dependencies": {
     "gulp": "^3.9.1",
