--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/sobolev-ax/frontend-gulp#readme",
   "devDependencies": {
     "animate.css": "^3.5.2",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.18.13",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^7.0.0",
     "gulp-clean-css": "^3.7.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-jade": "^1.1.0",
