--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-watch": "^4.3.11",
     "jshint": "^2.9.5",
     "rimraf": "^2.6.1",
+    "run-sequence": "^2.2.1",
     "scrollspy-js": "^0.1.3",
     "standard": "^10.0.3"
   },
